# kodi-windows

./: CMakeLists.txt
Source/: CMakeLists.txt  DEFINITIONS.h  KodiConfig.h.in  main.cpp
Source/Core/: CMakeLists.txt  CoreEngine.cpp  CoreEngine.hpp  CoreEvents.cpp  CoreEvents.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.h
Source/Core/Events/: CMakeLists.txt  EventGLFW.cpp  EventGLFW.hpp  EventInterface.cpp  EventInterface.hpp  EventSDL.cpp  EventSDL.hpp  EventSFML.cpp  EventSFML.hpp  KeyboardDefinitions.h  MouseDefinitions.h
Source/Core/Frameworks/: CMakeLists.txt  WindowGLFW.cpp  WindowGLFW.hpp  WindowInterface.cpp  WindowInterface.h  WindowSDL.cpp  WindowSDL.hpp  WindowSFML.cpp  WindowSFML.hpp
Source/Core/Graphics/: CMakeLists.txt  Renderable.cpp  Renderable.h  Shader.hpp  Texture.cpp
Source/Core/Graphics/Buffers/: CMakeLists.txt
Source/Math/: CMakeLists.txt  vec.h  vec2.h
Source/Shaders/: CMakeLists.txt  first.frag  first.vs
librarybinaries/: CMakeLists.txt
